<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en-US">
    <!-- errors -->
    <string name="form_field_empty_error">%s cannot be empty.</string>
    <string name="form_field_length_error">%1$s needs to have %2$s digits.</string>
    <string name="form_field_min_length_error">%1$s can\'t have less than %2$s digits.</string>
    <string name="form_field_validation_error_o">%s is not valid.</string>
    <string name="form_field_validation_error_a">%s is not valid.</string>

    <!-- field type names -->
    <string name="form_field_name_generic">Field</string>
    <string name="form_field_name_email">E-mail</string>
    <string name="form_field_name_date">Date</string>
...
